--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "telegraf": "^4.15.3",
     "@solana/web3.js": "^1.95.3",
     "@solana/spl-token": "^0.3.11",
